# cpp_starter_project

./: CMakeLists.txt
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
src/: CMakeLists.txt  main.cpp
src/imgui/: CMakeLists.txt
src/nana/: CMakeLists.txt  main.cpp
src/sdl/: CMakeLists.txt
test/: CMakeLists.txt  catch_main.cpp
