add_executable(test_sdl main.cpp)
include_directories(${SDL2_INCLUDE_DIRS})
if(ENABLE_CONAN)
target_link_libraries(test_sdl PRIVATE CONAN_PKG::sdl2)
else()
find_package(SDL2 REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(SDL2 REQUIRED sdl2)
target_link_libraries(test_sdl PRIVATE ${SDL2_LIBRARIES})
endif()
